--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -24,6 +24,7 @@ platforms:
 suites:
   - name: test
     run_list:
+      - recipe[test::travis_blank]
     verifier:
       inspec_tests:
         - test/integration/default
