--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -14,6 +14,12 @@ verifier:
   name: inspec
 
 platforms:
+  - name: centos-6
+    driver:
+      image: dokken/centos-6
+      pid_one_command: /sbin/init
+      intermediate_instructions:
+        - RUN /usr/bin/yum -y update
   - name: centos-7
     driver:
       image: dokken/centos-7
